# SonicSignature

./: README.md  clean_setup.ps1  main.py  pyproject.toml
livrable/Bonus/: Bonus_Conformal_Prediction.ipynb  Fayca_Ilyas_Bonus_Conformal_Prediction.tex
livrable/Bonus/code_for_zip/: main.py
livrable/Bonus/code_for_zip/src/: conformal.py
livrable/Part1/: Repport_Main.tex  submission.csv
livrable/Part1/code/: main.py
livrable/Part1/code/src/: analysis.py  classification.py  recommendation.py
livrable/Part1/code_for_zip/: main.py  requirements.txt
livrable/Part1/code_for_zip/src/: analysis.py  classification.py  recommendation.py
livrable/Part2/: Faycal_Ilyas_Part2.ipynb  Faycal_Ilyas_Part2_Example.ipynb  Faycal_Raghibi_Part2_Example.ipynb  Faycal_Raghibi_audio_fingerprinting.py
livrable/Part2/code/: requirements.txt
livrable/Part2/code/src/: fingerprinting.py
livrable/Part2/code_for_zip/: main.py
livrable/Part2/code_for_zip/src/: fingerprinting.py
livrable/Part2/dataset/: dataset.pickle
notebooks/: Bonus_Conformal_Prediction.ipynb  Part1_Spotify_ML.ipynb  Part2_Audio_Fingerprinting_and_Bonus.ipynb
repport/: Fayca_Ilyas_Bonus_Conformal_Prediction.tex  Main_00.tex  Main_01.tex
src/: conformal.py  database.py  fingerprinting.py
